--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,65 @@
     <artifactId>KumaisuLibraries</artifactId>
     <version>0.1</version>
     <packaging>jar</packaging>
+
+    <name>KumaisuLibraries</name>
+    <url>https://github.com/kumaisu/KumaisuLibraries</url>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <github.global.server>github-kumaisu</github.global.server>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <repositories>
+
+    <distributionManagement>
         <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <id>internal.repos</id>
+            <name>Minecraft My Plugin Common Libraries</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
         </repository>
-    </repositories> 
-    <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    </distributionManagement>
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <merge>true</merge>
+                    <!-- Git コミットメッセージ -->
+                    <message>Maven artifacts for ${project.version}</message>
+                    <noJekyll>true</noJekyll>
+                    <!-- distributionManagement の url と一致させる -->
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <!-- Github リポジトリ名 -->
+                    <repositoryName>KumaisuLibraries</repositoryName>
+                    <!-- Github リポジトリユーザー名 -->
+                    <repositoryOwner>kumaisu</repositoryOwner>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
