--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <!--spigot API-->
+    <dependencies>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
     <repositories>
         <repository>
             <id>spigot-repo</id>
@@ -34,7 +44,6 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
@@ -42,7 +51,6 @@
                     <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
@@ -72,14 +80,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 </project>
